# lcd_touch_controller

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  Gui.cpp  Gui.h  LcdDriver.cpp  LcdDriver.h  LcdScreen.cpp  LcdScreen.h  README.md  Spi.cpp  Spi.h  TouchDriver.cpp  TouchDriver.h  View.cpp  View.h  esp8266_01.cpp  esp8266_01.h  fonts.h  lcd_test.c  main.c  main.cpp  main.h  screen.cpp  screen.h
lib/config/: CMakeLists.txt  DEV_Config.c
lib/fatfs/: CMakeLists.txt  diskio.c  fatfs_storage.c
lib/font/: CMakeLists.txt
lib/lcd/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  LCD_Bmp.c  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_Touch.c  LCD_Touch.h  MMC_SD.c  MMC_SD.h  diskio.c  fatfs_storage.c  fatfs_storage.h  ff.c  ffconf.h
lib/sdcard/: CMakeLists.txt  MMC_SD.c
